fix(section.module.scss): center images on mobile

--- a/apps/web/src/components/section/section.module.scss
+++ b/apps/web/src/components/section/section.module.scss
@@ -1,9 +1,7 @@
 @use "~/utils/_variables" as g;
 
 .wrapper {
-  background-position:
-    0% 0%,
-    0% 0%;
+  background-position: center;
   background-size: cover, cover;
   background-repeat: no-repeat, no-repeat;
 }
